Fixed some bugs with validation.