@@ -2,6 +2,7 @@
 import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Properties;
@@ -10,6 +11,7 @@ import org.junit.Before;
 import org.junit.Test;
 import org.openqa.selenium.By;
 import org.openqa.selenium.Cookie;
+import org.openqa.selenium.TimeoutException;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.chrome.ChromeOptions;
@@ -55,28 +57,42 @@ public class HomePageFunctionalityTest {
     homePage.handleCookies();
 
     //Easily extendable array for static page load checking.
-    List<List<String>> sideBarList = List.of(
-      List.of("//div[@id='alkategoria']/div[1]/a", "Állatok - Gyakori kérdések"),
-      List.of("//div[@id='alkategoria']/div[2]/a", "Családi kapcsolatok - Gyakori kérdések"),
-      List.of("//div[@id='alkategoria']/div[3]/a", "Egészség - Gyakori kérdések"),
-      List.of("//div[@id='alkategoria']/div[4]/a", "Elektronikus eszközök - Gyakori kérdések"),
-      List.of("//div[@id='alkategoria']/div[5]/a", "Emberek - Gyakori kérdések"),
-      List.of("//div[@id='alkategoria']/div[6]/a", "Ételek, italok - Gyakori kérdések")
+    List<List<String>> sideBarList = Arrays.asList(
+      Arrays.asList("//div[@id='alkategoria']/div[1]/a", "Állatok - Gyakori kérdések"),
+      Arrays.asList("//div[@id='alkategoria']/div[2]/a", "Családi kapcsolatok - Gyakori kérdések"),
+      Arrays.asList("//div[@id='alkategoria']/div[3]/a", "Egészség - Gyakori kérdések"),
+      Arrays.asList("//div[@id='alkategoria']/div[4]/a", "Elektronikus eszközök - Gyakori kérdések"),
+      Arrays.asList("//div[@id='alkategoria']/div[5]/a", "Emberek - Gyakori kérdések"),
+      Arrays.asList("//div[@id='alkategoria']/div[6]/a", "Ételek, italok - Gyakori kérdések")
     );
 
+    //The amount of Thread.sleeps() here may look like an antipattern BUT they are sadly unavoidable.
+    //For some unholy reason the site throws a nice popup-ad my way here and ONLY here. I was unable to recreate it
+    //manually, and even if I were able to, the close prompts were always different. Refreshing the page after "detecting"
+    //the ad was a solution, but after that I had to massively reduce action speed (with the sleeps) otherwise
+    //chrome would crash. And ad-blockers were not an option as this version of chrome is basically prehistoric :).
     for(List<String> option : sideBarList) {
+      Thread.sleep(1000);
       WebElement optionElement = waitVisibiiltyAndFindElement(By.xpath(option.get(0)));
+      Thread.sleep(1000);
       optionElement.click();
-      wait.until(ExpectedConditions.titleIs(option.get(1)));
-      driver.navigate().back();
-      wait.until(ExpectedConditions.titleIs("Gyakori kérdések és válaszok"));
+      try {
+        wait.until(ExpectedConditions.titleIs(option.get(1)));
+        Thread.sleep(1000);
+        driver.navigate().back();
+        wait.until(ExpectedConditions.titleIs("Gyakori kérdések és válaszok"));
+      } catch (TimeoutException e) {
+        driver.navigate().refresh();
+        Thread.sleep(1000);
+        driver.get("https://gyakorikerdesek.hu/");
+      }
     }
   }
 
-  /*@After
+  @After
   public void close() {
     if (driver != null) {
       driver.quit();
     }
-  }*/
+  }
 }
